# Rosemary-AI

./: .gitignore  LICENSE  README.md  pyproject.toml
src/rosemary_ai/: __init__.py  _global_settings.py  _logger.py  decorators.py  exceptions.py  root.py  rosemary.py
src/rosemary_ai/_utils/: _file_utils.py  _image.py  _str_utils.py  _typing.py  dict_utils.py  file_utils.py  image.py  str_escape.py  str_utils.py  typing_utils.py
src/rosemary_ai/models/: _model_info.py  _option_types.py  _utils.py  api_key_manager.py  claude_generator.py  cohere_generator.py  generator.py  generator_registry.py  gpt_generator.py  request_generator.py  stability_generator.py
src/rosemary_ai/multi_modal/: image.py
src/rosemary_ai/parser/: _utils.py  data_expression.py  environment.py  executor.py  leaf_elements.py  namespace.py  parser.py  rosemary.lark  transformer.py  traverse.py
src/rosemary_ai/rml_common/: _gpt.rml  _http.rml  _sd.rml  _text.rml  _utils.rml  common.rml
test/formatter_tests/: simple.rml  test_formatter.py
test/integrated_tests/: test_integrated.py
test/model_tests/: test_model.py
test/parser_tests/: test_parser.py
test/rml_tests/: test_rml.py
test/template_tests/: test_template.py
